Refactor database operation service to use virtual thread executor and update Java version to 25